# autodev-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  program.md  pyproject.toml
autodev/: __init__.py  agent_loop.py  budget.py  cli.py  cli_mcp.py  config.py  knowledge_base.py  mutator.py  sessions.py  swarm.py  verifier.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COOKBOOK.md  LEARNING.md  MCP.md  SAFETY.md  SESSIONS.md  SWARM.md
tests/: __init__.py  conftest.py  test_agent_loop.py  test_agent_loop_run.py  test_budget.py  test_cli.py  test_config.py  test_knowledge_base.py  test_mutator.py  test_sessions.py  test_swarm.py  test_verifier.py
