[project]
name = "autodev-cli"
version = "0.4.0"
description = "Autonomous coding CLI: autoresearch metrics + SIN-Code verification"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "openai>=1.30.0",
    "gitpython>=3.1.40",
    "mcp>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "pyright>=1.1.350",
]

[project.scripts]
autodev = "autodev.cli:app"
autodev-mcp = "autodev.cli_mcp:main"

[project.urls]
Homepage = "https://github.com/OpenSIN-Code/autodev-cli"
Documentation = "https://github.com/OpenSIN-Code/autodev-cli/tree/main/docs"
Repository = "https://github.com/OpenSIN-Code/autodev-cli"
Issues = "https://github.com/OpenSIN-Code/autodev-cli/issues"
Changelog = "https://github.com/OpenSIN-Code/autodev-cli/blob/main/docs/CHANGELOG.md"
SisterCLI = "https://github.com/OpenSIN-Code/SIN-Code-Bundle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autodev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]
extend-ignore = ["B008"]  # typer.Argument/Option defaults required by framework

[tool.pyright]
pythonVersion = "3.10"
include = ["autodev", "tests"]
exclude = ["**/.venv", "**/build", "**/dist"]
reportPossiblyUnboundVariable = false
